// SPDX-FileCopyrightText: 2023 Pollux authors <https://github.com/polluxio/pollux-payload/blob/main/AUTHORS>
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

option go_package = "pollux/private/grpc";

package pollux;

message PolluxVersion {
  enum Version {
    DUMMY = 0;
    CURRENT = 7;
  }
  Version version = 1;
}

message PolluxUserOptionValue {
  oneof value {
    string strValue = 1;
    bool boolValue = 2;
    int64 int64Value = 3;
  }
}

message PolluxControl {
  enum VerbosityLevel {
    INFO = 0;
    DEBUG = 1;
    TRACE = 2;
  }
  VerbosityLevel verbosity = 1;
  repeated uint32 partIDs = 2;
  uint32 transmissionTimeout = 3;
  bool synchronized = 4;
  map<string, PolluxUserOptionValue> userOptions = 5; 
}

message PolluxMessageInt64ArrayValue {
  repeated int64 values = 1 [packed=true];
}

message PolluxMessageDoubleArrayValue {
  repeated double values = 1 [packed=true];
}

message PolluxMessage {
  uint32 origin  = 1;
  repeated uint32 destinations = 2 [packed=true];
  string key = 3;
  oneof value {
    string strValue = 4;
    int64 int64Value = 5;
    PolluxMessageInt64ArrayValue int64ArrayValue = 6;
    PolluxMessageDoubleArrayValue doubleArrayValue = 7;
  }
}

message PolluxLogMessage {
  uint32 origin  = 1;
  map<string, string> map = 2; 
}

message PolluxReportMessage {
  uint32 origin  = 1;
  map<string, string> map = 2; 
}

message NodeStatusMessage {
  uint32 nodeID = 1;
}

message NodeStatusResponse {
  enum NodeStatus {
    UNKNOWN = 0;
    RUNNING = 1;
    DONE = 2;
    TERMINATED = 3;
    FAILURE = 4;
  }
  NodeStatus status = 1;
};

message PolluxMessageResponse {
  string info = 1;
}

message PolluxControlResponse {
  string info = 1;
  string error = 2;
}

message PolluxStandardResponse {
  string info = 1;
}

message EmptyResponse {
}
